# chip-8

./: .gitignore  LICENSE  README.md  chip8.cabal  stack.yaml
data/: 1.chip8  bad.chip8  key.chip8
exec-src/: Main.hs
src/: Main.hs  Utils.hs
src/CPU/: Bits.hs  CPU.hs  Disassembler.hs  Emulate.hs  Utils.hs
src/Examples/: Programs.hs
src/MySDL/: MySDL.hs
src/Runtime/: Run.hs
tests/: Main.hs  Tests.hs
