name:                chip8
version:             0.0.2.0
synopsis:            A CHIP-8 emulator
license:             BSD3
license-file:        LICENSE
author:              Gil Mizrahi
maintainer:          gilmi@posteo.net
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

---

tested-with: GHC==7.10
tested-with: GHC==8.0.2

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/soupi/chip-8

library
  build-depends:
    base
   ,random
   ,vector
   ,microlens
   ,microlens-th
   ,microlens-mtl
   ,bytestring
   ,sdl2 >= 2.2.0 && < 3.0.0
   ,tomato-rubato-openal
   ,linear
   ,text
   ,optparse-applicative

  exposed-modules:
    CPU.CPU
   ,CPU.Emulate
   ,CPU.Disassembler
   ,CPU.Bits
   ,CPU.Utils
   ,MySDL.MySDL
   ,Runtime.Run

  exposed:
    True

  buildable:
    True

  hs-source-dirs:
    src

  default-language:
    Haskell2010

  other-extensions:
    LambdaCase

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

---

executable chip8
  main-is:             Main.hs
  build-depends:
    base
   ,bytestring
   ,chip8

  hs-source-dirs:
    exec-src
  default-language:
    Haskell2010
  ghc-options:
    -Wall -fno-warn-unused-do-bind -O2
    -threaded

---

Test-Suite test-chip8
  type:
    exitcode-stdio-1.0
  main-is:
    Tests.hs
  hs-source-dirs:
    tests
  build-depends:
    base
   ,bytestring
   ,random
   ,vector
   ,chip8
   ,tasty
   ,tasty-hunit

  default-language:
    Haskell2010
  ghc-options:
    -Wall -fno-warn-unused-do-bind -O2
    -threaded

---


executable tests
  main-is:
    Tests.hs

  hs-source-dirs:
    tests

  build-depends:
    base
   ,bytestring
   ,random
   ,vector
   ,chip8
   ,tasty
   ,tasty-hunit


  default-language:
    Haskell2010
  ghc-options:
    -Wall -fno-warn-unused-do-bind -O2
    -threaded

